added mapstruct
