# microservices/customer-microservice/src/main/java/com/aeas/microservices/customer_microservice/customer/model/Customer.java
@@ -1,0 +1,25 @@
+package com.aeas.microservices.customer_microservice.customer.model;
+
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+@Builder
+@Document
+public class Customer {
+    @Id
+    private String id;
+    private String firstName;   
+    private String lastName;
+    private String email;
+    private String phone;
+    private String address;
+    private String city;
+}
