# microservices/customer-microservice/src/main/java/com/aeas/microservices/customer_microservice/openapi/api_ms_customer.yml
@@ -16,52 +16,52 @@ externalDocs:
 servers:
   - url: https://localhost:8080/api/v3
 tags:
-  - name: user
-    description: Operations about user
+  - name: customer
+    description: Operations about customer
     externalDocs:
       description: Find out more about our store
       url: http://swagger.io
 paths:
-  /user:
+  /customer:
     post:
       tags:
-        - user
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: createUser
+        - customer
+      summary: Create customer
+      description: This can only be done by the logged in customer.
+      operationId: createCustomer
       requestBody:
-        description: Created user object
+        description: Created customer object
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
           application/xml:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
       responses:
         default:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Customer'
             application/xml:
               schema:
-                $ref: '#/components/schemas/User'
-  /user/{username}:
+                $ref: '#/components/schemas/Customer'
+  /customer/{firstName}:
     get:
       tags:
-        - user
-      summary: Get user by user name
+        - customer
+      summary: Get customer by firstName
       description: ''
-      operationId: getUserByName
+      operationId: getCustomerByfirstName
       parameters:
-        - name: username
+        - name: firstName
           in: path
-          description: 'The name that needs to be fetched. Use user1 for testing. '
+          description: 'The name that needs to be fetched. Use customer1 for testing. '
           required: true
           schema:
             type: string
@@ -71,72 +71,69 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'          
+                $ref: '#/components/schemas/Customer'          
             application/xml:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Customer'
         '400':
-          description: Invalid username supplied
+          description: Invalid firstName supplied
         '404':
-          description: User not found
+          description: Customer not found
     put:
       tags:
-        - user
-      summary: Update user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
+        - customer
+      summary: Update customer
+      description: This can only be done by the logged in customer.
+      operationId: updateCustomer
       parameters:
-        - name: username
+        - name: firstName
           in: path
           description: name that need to be deleted
           required: true
           schema:
             type: string
       requestBody:
-        description: Update an existent user in the store
+        description: Update an existent customer in the store
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
           application/xml:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
       responses:
         default:
           description: successful operation
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
+  /customer/{id}:
+      delete:
+        tags:
+          - customer
+        summary: Delete customer
+        description: This can only be done by the logged in customer.
+        operationId: deleteCustomer
+        parameters:
+          - name: id
+            in: path
+            description: The id that needs to be deleted
+            required: true
+            schema:
+              type: string
+        responses:
+          '400':
+            description: Invalid id supplied
+          '404':
+            description: Customer not found
 components:
   schemas:
-    User:
+    Customer:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 10
-        username:
           type: string
-          example: theUser
+          example: the id
         firstName:
           type: string
           example: John
@@ -146,23 +143,21 @@ components:
         email:
           type: string
           example: john@email.com
-        password:
-          type: string
-          example: '12345'
         phone:
           type: string
           example: '12345'
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-          example: 1
+        address:
+          type: string
+          example: 'Calle Alcalá' 
+        city:
+          type: string
+          example: "Madrid"
   requestBodies:
-    UserArray:
-      description: List of user object
+    CustomerArray:
+      description: List of customer object
       content:
         application/json:
           schema:
             type: array
             items:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Customer'
